--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "ember-source": "~3.23.1",
     "ember-template-lint": "^2.14.0",
     "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-ember": "^10.0.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "2.6.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "qunit-dom": "^1.6.0"
   },
   "engines": {
